--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>Appa is suprememe leader!</p>
             <img class="portrait" src="/img/Appa_Mo_Stool.jpg">
         </div>
         {{>footer}}
